--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
 	<meta charset="utf-8">
 
-		<title>Shkobin Landig</title>
+		<title>Shkobin Landing</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
+	
 	<meta property="og:image" content="path/to/image.jpg">
 	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
 	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
@@ -195,7 +195,7 @@
 			<div class="inform_cont">
 				<div class="adres_cont">
 					<div class="icon_adress"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
-					<h3>Адресс</h3>
+					<h3>Адрес</h3>
 					<span>Lorem ipsum dolor sit amet.</span>
 				</div>	
 				<div class="mobile_cont">
