--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 			
 	</header>
 	<section class="about_me" id="Section2">
+	<div class="about_wrap">
 		<div class="about"><h2>Обо мне</h2><span>познакомимся ближе</span></div>
 			
 					<div class="foto_me1"><h3 class="h3fot">фото</h3><img src="img/me.jpg" alt=""></div>
@@ -83,9 +84,10 @@
 						</div>
 		      		</div>
 
-	      	
+	      </div>	
 	</section>
 	<section class="rezume" id="Section3">
+	<div class="rezume_center">
 		<div class="zagolovok">	
 			<h2>Резюме</h2>
 			<span>Мои знания и достижения</span>
@@ -116,10 +118,11 @@
 				</div>
 			</div>
 		</div>
+	</div>
 	</section>
 	
 	<section class="portfolio" id="Section4">
-		
+	<div class="portfolio_center">	
 		<div class="zag_port">
 			<h2>Портфолио</h2>
 			<span>Мои последние работы</span>
@@ -183,10 +186,11 @@
 				</figcaption>
 			</figure>
 		</div>
-
+	</div>
 	</section>
 
 	<section class="contact" id="Section5">
+	<div class="contact_center">
 		<div class="zag_cont">
 			<h2>Контакты</h2>
 			<span>Оставьте вашу заявку</span>	
@@ -226,6 +230,7 @@
 				</form>
 			</div>
 		</div>
+	</div>
 	</section>
 	
 	<fouter class="fut">
